objects/Cancelled_Trainings__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cancelled Trainings</relationshipLabel>
        <relationshipName>R00N80000002V4L8EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conquest_Setup_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conquest Setup Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conquest_T1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conquest T1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conquest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conquest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_External__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant/External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBB_PAR_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KBB PAR New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBB_PAR_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KBB PAR Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Session_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New User Session 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_User_Session_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New User Session 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Cancelled Trainings</relationshipLabel>
        <relationshipName>Cancelled_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Training_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Training Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q &amp; A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Deal_Session_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Deal Session 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Deal_Session_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Deal Session 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Deal_Session_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Deal Session 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_Session_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Session 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repeat_Session_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Session 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Times__c</fullName>
        <label>Rescheduled Times</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subprime_Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subprime Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Train_1_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Train 1 Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Train_1_Upsell_WOC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With Out Charge</inlineHelpText>
        <label>Train 1 Upsell WOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Train_1_Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Train 1 Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Train_2_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Train 2 Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Train_2_Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Train 2 Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Train_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Train Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002V4L3EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_3_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training 3 - Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>photo_listings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>photo/listings</label>
        <type>Checkbox</type>
    </fields>
    <label>Cancelled Trainings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Trainer__c</columns>
        <columns>POA__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>ProcessDevelopmentManager</role>
            <role>SystemsAdministrator</role>
            <roleAndSubordinatesInternal>vAuto_VP_GM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>CT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancelled Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>